<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="habits_list_desc">Список привычек</string>
    <string name="quantity">Количество</string>
    
    <!-- Строки из item_habit.xml -->
    <string name="make_bed">заправить постель</string>
    <string name="created_date_format">Создано: %1$s</string>
    <string name="progress_format">%1$d / %2$d %3$s</string>
    
    <!-- Строки из slider_layout.xml -->
    <string name="hours">Часы</string>
    <string name="minutes">Минуты</string>
    <string name="zero">0</string>
    
    <!-- Строки из MainActivity.kt -->
    <string name="settings">Настройки</string>
    <string name="language">Язык</string>
    <string name="select_language">Выберите язык</string>
    <string name="language_ru">Русский</string>
    <string name="language_en">English</string>
    <string name="habit_added_format">Привычка добавлена: %1$s</string>
    <string name="habit_marked_completed">Привычка отмечена как выполненная</string>
    <string name="habit_marked_uncompleted">Привычка отмечена как невыполненная</string>
    <string name="habits_progress_reset">Прогресс привычек сброшен для нового дня</string>
    <string name="meditation">Медитация</string>
    <string name="pushups">Отжимания</string>
    <string name="times">раз</string>
    <string name="drink_water">Пить воду</string>
    <string name="delete_habit_title">Удаление привычки</string>
    <string name="delete_habit_confirmation">Вы уверены, что хотите удалить эту привычку?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="habit_deleted">Привычка удалена</string>
    <string name="progress_updated_minutes">Прогресс обновлен: %1$d минут</string>
    <string name="progress_updated_format">Прогресс обновлен: %1$d %2$s</string>
    <string name="drag_to_reorder">Перетащите для изменения порядка</string>
    <string name="error_invalid_position">Ошибка: неверная позиция привычки</string>
    <string name="section">Раздел</string>
    <string name="add_new_section">Добавить новый раздел</string>
    <string name="add_section">Добавление раздела</string>
    <string name="section_name">Название раздела</string>
    <string name="section_added">Раздел добавлен</string>
    <string name="enter_section_name">Введите название раздела</string>

    <!-- Строки из SecondFragment.kt -->
    <string name="edit_habit">Редактирование привычки</string>
    <string name="habit">привычка</string>
    <string name="one">1</string>
    <string name="thirty">30</string>
    <string name="ten">10</string>
    <string name="enter_habit_name">Введите название привычки</string>
    <string name="habit_updated">Привычка обновлена</string>
    
    <!-- Строки из Habit.kt -->
    <string name="min">мин</string>
    <string name="completed">Выполнено</string>
    <string name="not_completed">Не выполнено</string>
    
    <!-- HabitChartFragment.kt -->
    <string name="progress_chart">График прогресса</string>
    <string name="display_mode">Режим отображения</string>
    <string name="time_interval">Временной интервал</string>
    <string name="data_labels">Метки данных</string>
    <string name="show">Показать</string>
    <string name="hide">Скрыть</string>
    <string name="daily">Ежедневно</string>
    <string name="weekly">Еженедельно</string>
    <string name="monthly">Ежемесячно</string>
    <string name="in_progress">В процессе</string>
    
    <!-- Строки из HabitAdapter.kt -->
    <string name="hours_short">Часы</string>
    <string name="minutes_short">Минуты</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    
    <!-- Строки из HabitChartFragment.kt -->
    <string name="back">Назад</string>
    <string name="progress_chart_title">График прогресса: %1$s</string>
    <string name="normal_mode">Обычный</string>
    <string name="cumulative_mode">Накопительный</string>
    <string name="seven_days">7 дней</string>
    <string name="thirty_days">30 дней</string>
    <string name="all_time">Всё время</string>
    <string name="no_progress_data">Нет данных о прогрессе</string>
    <string name="no_data_to_display">Нет данных для отображения</string>
    <string name="minutes_label">Минуты</string>
    <string name="completed_label">Выполнено</string>
    <string name="yes_short">Да</string>
    <string name="target">Цель</string>
    
    <!-- Строки из fragment_second.xml -->
    <string name="add_habit">Добавление привычки</string>
    <string name="habit_name">Название привычки</string>
    <string name="habit_type">Тип привычки:</string>
    <string name="time">Время</string>
    <string name="simple">Простая</string>
    <string name="unit">единица</string>
    <string name="time_hours_minutes">Время (часы:минуты)</string>
    <string name="cancel">ОТМЕНА</string>
    <string name="save">СОХРАНИТЬ</string>
    
    <!-- Строки из activity_main.xml -->
    <string name="add_task">Добавить задачу</string>
</resources>